packages/native/vendor/zireael/src/core/zr_framebuffer.h

/* Shared rect type for clip and draw ops. */
typedef struct zr_rect_t {
  int32_t x;
  int32_t y;
  int32_t w;
  int32_t h;
} zr_rect_t;
/*
  zr_style_t:
    - reserved is ABI-pinned to 0 in v1.
    - fg_rgb/bg_rgb are 0x00RRGGBB in v1 (consistent with diff renderer pins).
*/
typedef struct zr_style_t {
  uint32_t fg_rgb;
  uint32_t bg_rgb;
  uint32_t attrs;
  uint32_t reserved;      /* v3+: underline variant (0 keeps v1 semantics) */
  uint32_t underline_rgb; /* v3+: 0x00RRGGBB underline color (0 = default) */
  uint32_t link_ref;      /* framebuffer link table ref; 0 means no link */
} zr_style_t;
/* Cell model (LOCKED v1). */
enum { ZR_CELL_GLYPH_MAX = 32, ZR_FB_LINK_URI_MAX_BYTES = 2083, ZR_FB_LINK_ID_MAX_BYTES = 2083 };
typedef struct zr_fb_link_t {
  uint32_t uri_off;
  uint32_t uri_len;
  uint32_t id_off;
  uint32_t id_len;
} zr_fb_link_t;
typedef struct zr_cell_t {
  uint8_t glyph[ZR_CELL_GLYPH_MAX]; /* UTF-8 bytes for one grapheme cluster (or ASCII) */
  uint8_t glyph_len;                /* 0..ZR_CELL_GLYPH_MAX */
  uint8_t width;                    /* 0=continuation, 1=normal, 2=wide lead */
  uint16_t _pad0;
  zr_style_t style;
} zr_cell_t;
typedef struct zr_fb_t {
  uint32_t cols;
  uint32_t rows;
  zr_cell_t* cells;    /* engine-owned backing; row-major; length cols*rows */
  zr_fb_link_t* links; /* engine-owned link entries (1-based externally) */
  uint32_t links_len;
  uint32_t links_cap;
  uint8_t* link_bytes; /* packed URI/ID bytes used by links[] offsets */
  uint32_t link_bytes_len;
  uint32_t link_bytes_cap;
} zr_fb_t;
zr_result_t zr_fb_init(zr_fb_t* fb, uint32_t cols, uint32_t rows);
void zr_fb_release(zr_fb_t* fb);
zr_cell_t* zr_fb_cell(zr_fb_t* fb, uint32_t x, uint32_t y);
zr_result_t zr_fb_links_clone_from(zr_fb_t* dst, const zr_fb_t* src);
zr_result_t zr_fb_link_intern(zr_fb_t* fb, const uint8_t* uri, size_t uri_len, const uint8_t* id, size_t id_len,
                              uint32_t* out_link_ref);
zr_result_t zr_fb_link_lookup(const zr_fb_t* fb, uint32_t link_ref, const uint8_t** out_uri, size_t* out_uri_len,
                              const uint8_t** out_id, size_t* out_id_len);
/*
  Painter + clip stack:
    - Caller provides clip_stack storage (bounded, no allocations).
    - Current clip is the intersection of framebuffer bounds and all stacked clips.
*/
typedef struct zr_fb_painter_t {
  zr_fb_t* fb;
  zr_rect_t* clip_stack;
  uint32_t clip_cap;
  uint32_t clip_len;
} zr_fb_painter_t;
zr_result_t zr_fb_painter_begin(zr_fb_painter_t* p, zr_fb_t* fb, zr_rect_t* clip_stack, uint32_t clip_cap);
zr_result_t zr_fb_clip_push(zr_fb_painter_t* p, zr_rect_t clip);
zr_result_t zr_fb_clip_pop(zr_fb_painter_t* p);
/*
  Ops (clip-aware unless noted).

  Invariant-repair exception (LOCKED):
    - zr_fb_put_grapheme() may clear one adjacent paired wide cell (x-1 or x+1)
      outside clip when overwriting a continuation/lead edge.
    - This exception is bounded to that single pair cell only.
*/
zr_result_t zr_fb_clear(zr_fb_t* fb, const zr_style_t* style); /* ignores clip */
/*
  zr_fb_put_grapheme:
    - bytes are already grapheme-segmented (caller responsibility).
    - width is provided by caller (0/1/2); width==0 is invalid for put.
    - len==0 is normalized to a single ASCII space (width 1).
    - Paired-cell invariant repair may clear one adjacent pair cell outside clip
      (bounded exception; no broader out-of-clip mutation).
    - Replacement policy (LOCKED):
        - len > ZR_CELL_GLYPH_MAX -> render U+FFFD (width 1)
        - width==2 but cannot fully fit within bounds/clip -> render U+FFFD (width 1)
*/
zr_result_t zr_fb_put_grapheme(zr_fb_painter_t* p, int32_t x, int32_t y, const uint8_t* bytes, size_t len,
                               uint8_t width, const zr_style_t* style);