packages/native/vendor/zireael/include/zr/zr_engine.h

/* Opaque engine handle (owned and managed by the engine API). */
typedef struct zr_engine_t zr_engine_t;
/*
  Threading contract (normative):
    - Engine instances are single-thread-affine.
    - All `engine_*` APIs are engine-thread-only, except:
        `engine_post_user_event()`, which is callable cross-thread.
    - During teardown, `engine_post_user_event()` may return
      `ZR_ERR_INVALID_ARGUMENT`.
    - Wrappers must quiesce post threads before calling `engine_destroy()`.
*/

/*
  Create an engine instance.

  Contract:
    - Validates cfg (including version negotiation).
    - Initializes platform/backend resources and enters raw mode.
    - Allocates engine-owned state (framebuffers, queues, output buffers).
    - Enqueues an initial ZR_EV_RESIZE event.

  Args:
    - out_engine: required output pointer; set to NULL on failure.
    - cfg: required create-time config.

  Returns:
    - ZR_OK on success.
    - ZR_ERR_INVALID_ARGUMENT, ZR_ERR_UNSUPPORTED, ZR_ERR_OOM,
      or ZR_ERR_PLATFORM on failure.
*/
zr_result_t engine_create(zr_engine_t** out_engine, const zr_engine_config_t* cfg);
/*
  Destroy an engine instance.

  Contract:
    - Safe with NULL.
    - Must be called after external post threads are quiesced.
    - Releases engine-owned resources.
    - Restores platform state best-effort (e.g. leave raw mode).
*/
void engine_destroy(zr_engine_t* e);
/*
  Poll input, normalize queued events, and write a packed event batch.

  Args:
    - e: engine instance.
    - timeout_ms: wait timeout in milliseconds (>= 0).
    - out_buf/out_cap: caller output buffer for packed batch.

  Returns:
    - >0: bytes written into out_buf.
    -  0: timeout/no events available.
    - <0: negative ZR_ERR_* failure code.

  Notes:
    - If out_cap > 0, out_buf must be non-NULL.
    - Batch format is defined in zr_event.h.
    - Truncation (insufficient capacity for all records) is success-mode and
      signaled by ZR_EV_BATCH_TRUNCATED in batch header flags.
*/
int engine_poll_events(zr_engine_t* e, int timeout_ms, uint8_t* out_buf, int out_cap);
/*
  Post a wrapper-defined user event to the engine queue.

  Contract:
    - Intended to be callable cross-thread to wake blocked polling.
    - Payload bytes are copied during the call.
    - Returns ZR_ERR_INVALID_ARGUMENT when teardown has started.

  Args:
    - tag: wrapper-defined event discriminator.
    - payload/payload_len: optional opaque payload.

  Returns:
    - ZR_OK on success; negative error code on failure.
*/
zr_result_t engine_post_user_event(zr_engine_t* e, uint32_t tag, const uint8_t* payload, int payload_len);
/*
  Validate and execute drawlist bytes into engine render state.

  Contract:
    - Input is treated as untrusted and fully validated.
    - No-partial-effects: state commit only occurs on success.
*/
zr_result_t engine_submit_drawlist(zr_engine_t* e, const uint8_t* bytes, int bytes_len);
/*
  Present current frame by diffing and writing terminal output.

  Contract:
    - Performs one backend write on success.
    - Commits presented-frame state/metrics only after successful write.
*/
zr_result_t engine_present(zr_engine_t* e);